feat: add database connection

--- a/book-shop/appsettings.json
+++ b/book-shop/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "Defaultconnection": "Server:(localdb)\\localhost;Database=book-shop;Trusted_Connection=True;TrustServerCertificate=True"
+    }
 }
