fix: correct typo in DefaultConnection string value

--- a/book-shop/appsettings.json
+++ b/book-shop/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Defaultconnection": "Server:(localdb)\\localhost;Database=book-shop;Trusted_Connection=True;TrustServerCertificate=True"
+        "Defaultconnection": "Server=(localdb)\\localhost;Database=book-shop;Trusted_Connection=True;TrustServerCertificate=True"
     }
 }
